--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Local Test</title>
+    <title>Local 123</title>
   </head>
   <body>
     <h1>Hi from local</h1>
