--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
 
   <header>
-    <h1>ShopEasy</h1>
+    <h1>Shop-Easy</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#">Products</a>
